# infiniscouter

./: .dockerignore  .editorconfig  .gitignore  Dockerfile  todo.md
.github/workflows/: build-and-check.yml
client/: .eslintrc.json  .gitignore  bun.lockb  index.html  package-lock.json  package.json  tsconfig.json
client/assets/: index.html  manifest.json  style.css
client/src/: app.tsx  images.ts  index.tsx
client/src/components/: data_value.tsx  entry_components.tsx  get_scout_name.tsx  load_indicator.tsx  match_and_team_selector.tsx  navbar.tsx  scout_name_required.tsx  sync_button.tsx  sync_required.tsx  tba_link.tsx  tba_links.tsx
client/src/data/: atoms.ts  entries.ts  hooks.ts
client/src/pages/: analysis.tsx  configuration.tsx  debug.tsx  driver_entry.tsx  full_image.tsx  home.tsx  leaderboard.tsx  match_entry.tsx  match_info.tsx  match_list.tsx  not_found.tsx  pit_entry.tsx  reload.tsx  team_info.tsx  team_list.tsx
deploy/: docker-compose.yml  readme.md
server/: Cargo.toml  team_config.yaml
server/games/: 2022.yaml  2024.yaml  2025.yaml  2026.yaml  common.yaml
server/src/: analysis.rs  api.rs  config.rs  data_validation.rs  database.rs  leaderboard.rs  main.rs  server.rs  statbotics.rs  tba.rs
server/src/api/: data.rs
server/src/config/: match_entry.rs
