[package]
name = "infiniscouter-server"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6"
log = "0.4"
poem = { version = "1", features = ["static-files"] }
poem-openapi = { version = "3", features = ["swagger-ui"] }
reqwest = { version = "0.11", features = ["json"] }
rust-embed = "6"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
simplelog = "0.12"
sled = "0.34"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
ts-rs = "7"
