[package]
name = "infiniscouter-server"
version = "0.1.0"
edition = "2021"

[dependencies]
async-openai = { version = "0.18", default-features = false, features = ["rustls"] }
base64 = "0.21"
bincode = "1.3"
color-eyre = "0.6"
futures-util = "0.3"
image = "0.24"
log = "0.4"
poem = { version = "1", default-features = false, features = ["compression", "rustls", "static-files"] }
poem-openapi = { version = "3", features = ["swagger-ui"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls"] }
rust-embed = "6"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
signal-hook = "0.3"
simplelog = "0.12"
sled = "0.34"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
ts-rs = "7"
vader_sentiment = "0.1"
