[package]
name = "infiniscouter-server"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22"
bincode = "1.3"
color-eyre = "0.6"
futures-util = "0.3"
image = "0.25"
log = "0.4"
poem = { version = "3", default-features = false, features = ["compression", "rustls", "static-files"] }
poem-openapi = { version = "5", features = ["swagger-ui"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
rust-embed = "8"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
signal-hook = "0.4"
simplelog = "0.12"
sled = "0.34"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
ts-rs = "12"
vader_sentiment = "0.1"
